[gd_scene load_steps=6 format=3 uid="uid://bsagufs3aosge"]

[ext_resource type="PackedScene" uid="uid://dg5smahvnvxv2" path="res://prefabs/ui/components/sliding_ui.tscn" id="1_oc7ro"]
[ext_resource type="Texture2D" uid="uid://krulr5se05um" path="res://textures/o_high.png" id="1_ujbsq"]
[ext_resource type="Script" path="res://scripts/ui/options_ui.gd" id="1_ukybt"]
[ext_resource type="Texture2D" uid="uid://8oywsbkp41oc" path="res://textures/x.png" id="2_0ix7f"]

[sub_resource type="Curve" id="Curve_cfjf1"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="options_ui" type="Panel"]
offset_left = 5.0
offset_top = 74.0
offset_right = 517.0
offset_bottom = 404.0
pivot_offset = Vector2(-5, -74)
script = ExtResource("1_ukybt")

[node name="sliding_ui" parent="." node_paths=PackedStringArray("sliding_target") instance=ExtResource("1_oc7ro")]
layout_mode = 1
sliding_target = NodePath("..")
open_position = Vector2(5, 74)
close_position = Vector2(-517, 74)
slide_curve = SubResource("Curve_cfjf1")

[node name="Label" type="Label" parent="."]
layout_mode = 1
offset_left = 5.0
offset_top = 5.0
offset_right = 67.0
offset_bottom = 28.0
text = "Options"

[node name="close_button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -29.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 29.0
grow_horizontal = 0
texture_normal = ExtResource("1_ujbsq")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="close_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0ix7f")
expand_mode = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 34.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UI Scale" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/UI Scale"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
text = "UI Scale:	    "
vertical_alignment = 1

[node name="ui_scale_slider" type="HSlider" parent="ScrollContainer/VBoxContainer/UI Scale"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0

[node name="ui_scale_line_edit" type="LineEdit" parent="ScrollContainer/VBoxContainer/UI Scale"]
layout_mode = 2
text = "1"
editable = false
virtual_keyboard_type = 3

[connection signal="pressed" from="close_button" to="." method="_on_close_button_pressed"]
[connection signal="drag_ended" from="ScrollContainer/VBoxContainer/UI Scale/ui_scale_slider" to="." method="_on_ui_scale_slider_drag_ended"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/UI Scale/ui_scale_slider" to="." method="_on_ui_scale_slider_value_changed"]
[connection signal="text_changed" from="ScrollContainer/VBoxContainer/UI Scale/ui_scale_line_edit" to="." method="_on_ui_scale_value_changed"]
